# guidance-for-claude-code-with-amazon-bedrock

./: .gitattributes  .gitignore  .secrets.baseline  CHANGELOG.md  QUICK_START.md  README.md  mkdocs.yml
source/: pyproject.toml
source/claude_code_with_bedrock/: config.py  migration.py  models.py  validators.py
source/claude_code_with_bedrock/cli/: __init__.py
source/claude_code_with_bedrock/cli/commands/: __init__.py  builds.py  cleanup.py  context.py  cowork.py  deploy.py  destroy.py  distribute.py  doctor.py  init.py  package.py  package_cb.py  quota.py  security.py  status.py  test.py
source/claude_code_with_bedrock/cli/utils/: cloudformation.py  cowork_3p.py  display.py  helpers.py  oidc_discovery.py  progress.py  security_profiles.py
source/claude_code_with_bedrock/utils/: url_validation.py
source/credential_provider/: __main__.py
source/go/: Makefile  go.mod  go.sum
source/go/cmd/azure-assertion-smoke/: main.go
source/go/cmd/credential-process/: bedrock_token.go  desktop_helper.go  main.go  rsrc_windows_amd64.syso  sigv4_helpers.go
source/go/cmd/otel-helper/: main.go  rsrc_windows_amd64.syso
source/go/internal/browser/: open.go
source/go/internal/config/: config.go  migration_test.go
source/go/internal/federation/: cognito.go  sts.go  sts_test.go
source/go/internal/jwt/: decode.go  decode_test.go
source/go/internal/oidc/: callback.go  confidential.go  confidential_test.go  flow.go  pkce.go  pkce_test.go  token.go
source/go/internal/otel/: cache.go  cache_test.go  extract.go  extract_test.go  headers.go  headers_test.go
source/go/internal/portlock/: lock.go
source/go/internal/provider/: endpoints.go  provider.go  provider_test.go
source/go/internal/quota/: quota.go
source/go/internal/storage/: keyring.go  (+4 more)
source/go/scripts/: credential-process.ps1
source/otel_helper/: __main__.py  collector-config.yaml  ocb-manifest.yaml  otel-helper.sh
source/tests/: test_anonymous_mode.py  test_cloudformation.py  test_config.py  test_config_migration.py  test_config_models.py  test_cowork_credential_helper.py  test_google_provider.py  test_models.py  test_oidc_discovery.py  test_otel_jwt_expiry.py  test_quota_check_lambda.py  test_websearch_gateway.py
source/tests/e2e/: test_cfn_contracts.py  test_cross_platform.py
(+77 files in other folders)
